Make table look good

--- a/Core/BlazorTutorial.Core.Web/Books/BookTableComponent.razor
+++ b/Core/BlazorTutorial.Core.Web/Books/BookTableComponent.razor
@@ -10,7 +10,7 @@ else if (!Books.Any())
 }
 else
 {
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Title</th>
